example/lib/src/generated/errors/errors_localization_ps.dart
// This file is generated, do not edit it manually!

// ignore: unused_import
import 'package:intl/intl.dart' as intl;
import 'errors_localization.dart';

// ignore_for_file: type=lint

/// The translations for Pushto Pashto (`ps`).
class ErrorsLocalizationPs extends ErrorsLocalization {
  ErrorsLocalizationPs([String locale = 'ps']) : super(locale);

  @override
  String get error => 'An error occurred';

  @override
  String get unexpectedError => 'یو ناڅاپي تېروتنه رامنځته شوه';

  @override
  String get bugReportSentText => 'د خطا راپور په بریالیتوب سره لیږل شوی.';
}
